--- a/PokemonTeam/Views/Shared/_GameLayout.cshtml
+++ b/PokemonTeam/Views/Shared/_GameLayout.cshtml
@@ -12,15 +12,15 @@
 <body class="game-body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary game-nav">
         <div class="container">
-            <a class="navbar-brand" href="/Game">
+            <a class="navbar-brand" href="/PokemonArena">
                 <i class="fas fa-bolt text-warning"></i> Pokémon Arena
             </a>
             
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/Game"><i class="fas fa-home"></i> Accueil</a>
-                <a class="nav-link" href="/Game/Combat"><i class="fas fa-fist-raised"></i> Combat</a>
-                <a class="nav-link" href="/Game/Shop"><i class="fas fa-shopping-cart"></i> Shop</a>
-                <a class="nav-link" href="/Game/Profile"><i class="fas fa-user"></i> Profil</a>
+                <a class="nav-link" href="/PokemonArena"><i class="fas fa-home"></i> Accueil</a>
+                <a class="nav-link" href="/PokemonArena/Combat"><i class="fas fa-fist-raised"></i> Combat</a>
+                <a class="nav-link" href="/PokemonArena/Shop"><i class="fas fa-shopping-cart"></i> Shop</a>
+                <a class="nav-link" href="/PokemonArena/Profile"><i class="fas fa-user"></i> Profil</a>
             </div>
             
             <div class="player-stats ms-3">
