skill type add to pokemon

--- a/PokemonTeam/Views/Shared/_Layout.cshtml
+++ b/PokemonTeam/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="PokeGacha" asp-action="">PokeGacha</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="PokeRogue" asp-action="">PokeRogue</a>
+                    </li>
                 </ul>
 
                 <!-- Bloc Auth -->
