feature: paripoke finish

--- a/PokemonTeam/Views/PariPoke/_BetSelection.cshtml
+++ b/PokemonTeam/Views/PariPoke/_BetSelection.cshtml
@@ -6,6 +6,9 @@
 <input type="hidden" id="selectedBetPokemon" />
 
 <div class="input-group mb-3 bet-controls mt-3">
-    <input id="betAmount" type="number" class="form-control bet-input" min="1" value="10">
-    <button id="confirmBet" type="button" class="btn btn-primary">Confirmer mon pari</button>
+    <input id="betAmount" type="number" class="form-control bet-input" min="1" value="10" placeholder="Montant du pari" />
+
+    <input id="numRounds" type="number" class="form-control bet-input ms-2" min="1" value="1" placeholder="Nombre de tours" />
+
+    <button id="confirmBet" type="button" class="btn btn-primary ms-2">Confirmer mon pari</button>
 </div>
