--- a/PokemonTeam/wwwroot/css/PariPoke.css
+++ b/PokemonTeam/wwwroot/css/PariPoke.css
@@ -225,3 +225,23 @@
     transition: filter 0.3s ease;
 }
 
+
+.runner-wrapper {
+    position: absolute;
+}
+
+.hp-bar {
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    width: 50px;
+    height: 5px;
+    background: #444;
+}
+
+.hp-fill {
+    height: 100%;
+    background: #00c853;
+    width: 100%;
+    transition: width 0.1s linear;
+}
